# detector

./: .gitignore  CLAUDE.md  config.sh  links.md  magnitude.md  magnitude_prompt.md  popular_benchmarks.md  popular_tools.md  pyproject.toml
chrome/: background.js  config.js  manifest.json
chrome/scripts/: build.sh
examples/: 01_ai_gpt_think_521.txt  02_ai_gem_531.txt  03_ai_gem_think_581.txt  05_ai_ds_think_258.txt  06_repetition_256.txt  06_repetition_64.txt  07_repetition_128.txt  08_defoe_339.txt  make_plots.py  runs.md  test_magnitude.py  test_simple_logreg.py
magnitude/: TODO.md  benchmark_synthetic.py  create_dataset.py  demo_real_embeddings.py  magnitude.py  magnitude_hand.py  multiscale_benchmark.py  reproduce_magnitude.py  results_multiscale_n300.txt  results_synthetic_n300.txt  test_logistic_regression.py  test_magnitude.py  test_synthetic.py  text_processing.py
main_paper_data/: IntrinsicDim.py  example.ipynb  reproduce.py  run_results.txt  run_results_02.txt
papers/: 1906.04043_gltr.tex  2303.14822_mgtbench.tex  2401.12070_binoculars.tex  2405.07940_raid.tex  2602.13042_zerogpt.tex
scripts/: add_completion.py  run_common.py  run_locally.py  run_on_euler.py  test_intrinsic_dim.py  test_intrinsic_dim_euler.py  test_simple_logreg.py
server/: .env.example  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt
src/: db_iterator.py  embeddings_dataset.py  embeddings_provider.py  intrinsic_dim.py  json_iterator.py  json_pp_iterator.py  logistic_regression.py  logistic_regression_test.py  magnitude.py  model.py  model_info.py
(+13 files in other folders)
